hphp/hack/test/typecheck/test_lambda_reactive.php.like_types.exp
File "test_lambda_reactive.php", line 27, characters 10-11:
Invalid return type (Typing[4110])
File "test_lambda_reactive.php", line 23, characters 19-39:
Expected ~(function(): int) because it is an unenforceable type
File "test_lambda_reactive.php", line 24, characters 8-57:
But got (function(): int)
